force-app/main/default/objects/Aplicacao__c/Aplicacao__c.object-meta.xml
<CustomObject>
    <label>Aplicação</label>
    <nameField>
        <label>Código Aplicação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aplicações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>