force-app/main/default/objects/Aplicacao__c/fields/CodigoAplicacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoAplicacao__c</fullName>
    <externalId>true</externalId>
    <label>Código Aplicação</label>
    <length>80</length>
    <type>Text</type>
</CustomField>