force-app/main/default/objects/Aplicacao__c/fields/Descricao_Aplicacao_Pesquisa__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Aplicacao_Pesquisa__c</fullName>
    <label>Descrição Aplicação Pesquisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>