force-app/main/default/objects/Aplicacao__c/fields/Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Fabricante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fabricante</label>
    <referenceTo>Fabricante__c</referenceTo>
    <relationshipLabel>Aplicações</relationshipLabel>
    <relationshipName>Aplicacoes</relationshipName>
    <type>Lookup</type>
</CustomField>