force-app/main/default/objects/Aplicacao__c/fields/Montadora__c.field-meta.xml
<CustomField>
    <fullName>Montadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Montadora</label>
    <referenceTo>Montadora__c</referenceTo>
    <relationshipLabel>Aplicações</relationshipLabel>
    <relationshipName>Aplicacoes</relationshipName>
    <type>Lookup</type>
</CustomField>