force-app/main/default/objects/Aplicacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoAplicacao__c</columns>
    <columns>Descricao_Aplicacao__c</columns>
    <columns>Descricao_Aplicacao_Pesquisa__c</columns>
    <columns>Montadora__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>